# Wool

./: .gitignore  CMakeLists.txt  Dockerfile_wool_base  Dockerfile_wool_base_ssh  Dockerfile_wool_library  Dockerfile_wool_library_ssh  README.md  WoolConfig.cmake.in
include/: BatchingVisitor.hpp  CircuitCompositionVisitor.hpp  CircuitHelpers.hpp  MultCountVisitor.hpp  OpCountVisitor.hpp  ParameterVisitor.hpp  Wool.hpp
src/: BatchingVisitor.cpp  CircuitCompositionVisitor.cpp  CircuitHelpers.cpp  MultCountVisitor.cpp  OpCountVisitor.cpp  ParameterVisitor.cpp  Wool.cpp
tests/: CMakeLists.txt  testsWool.cpp
